--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id="wrapper">
-    <h1>Adrian Johnson</h1>
+    <h1>Mr. Adrian Johnson</h1>
     <h2>Student</h2>
     <h3>Chicago, IL</h3>
     <div>
