--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
   <title>Adrian Johnson, Student</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="style.css">
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
 <body>
   <div id="wrapper">
-    <h1>Mr. Adrian Johnson</h1>
+    <h1>Adrian Johnson</h1>
+    <p>
+      <img src="adrianjohnson.jpeg"
+    <p>
     <h2>Student</h2>
     <h3>Chicago, IL</h3>
     <div>
