--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Patricia's Back Barn</title>
+    <title>About</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -33,7 +33,7 @@
 <body>
 
     <div class="brand">Patricia's Back Barn</div>
-    <div class="address-bar">6610 Shawnee Road | North Tonawanda, NY 14120 | 716.731.1911</div>
+    <div class="address-bar">6610 Shawnee Road | North Tonwanda, NY 14120 | 716.731.1911</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -47,7 +47,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="index.html">Patricia's Back Barn</a>
+                <a class="navbar-brand" href="index.html">Business Casual</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -72,42 +72,21 @@
 
         <div class="row">
             <div class="box">
-                <div class="col-lg-12 text-center">
-                    <div id="carousel-example-generic" class="carousel slide">
-                        <!-- Indicators -->
-                        <ol class="carousel-indicators hidden-xs">
-                            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                        </ol>
-
-                        <!-- Wrapper for slides -->
-                        <div class="carousel-inner">
-                            <div class="item active">
-                                <img class="img-responsive img-full" src="img/patriciafav.jpg" alt="">
-                            </div>
-                            <div class="item">
-                                <img class="img-responsive img-full" src="img/patriciaroom.jpg" alt="">
-                            </div>
-                            <div class="item">
-                                <img class="img-responsive img-full" src="img/patriciabuffalo.jpg" alt="">
-                            </div>
-                        </div>
-
-                        <!-- Controls -->
-                        <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-                            <span class="icon-prev"></span>
-                        </a>
-                        <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-                            <span class="icon-next"></span>
-                        </a>
-                    </div>
-                    <h2 class="brand-before">
-                        <small>Welcome to</small>
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center">About
+                        <strong>Patricia's Back Barn</strong>
                     </h2>
-                    <h1 class="brand-name">Patricia's Back Barn</h1>
-                    <hr class="tagline-divider">
+                    <hr>
                 </div>
+                <div class="col-md-6">
+                    <img class="img-responsive img-border-left" src="img/patriciamain.jpg" alt="">
+                </div>
+                <div class="col-md-6">
+                    <p>Patricia's Back Barn is a 3,000sq.ft. barn uniquely staged with an eclectic mix of furniture, home décor, accessories, antiques, vintage clothing, and architectural salvage. We look for the most unique pieces, specialize in mixing the old with the new.</p>
+                    <p>Whether you're looking for that one unique wow piece or looking to furnish an entire room or home, we're here with every style to help you get inspired. </p>
+                </div>
+                <div class="clearfix"></div>
             </div>
         </div>
 
@@ -115,15 +94,33 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Website Under Construction
-                        <strong>Come Back Soon!</strong>
+                    <h2 class="intro-text text-center">Our
+                        <strong>Team</strong>
                     </h2>
                     <hr>
-                    <img class="img-responsive img-border img-left" src="img/patriciamain.jpg" alt="">
-                    <hr class="visible-xs">
-                    <p></p>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="img/Patricia.jpg" alt="">
+                    <h3>Patricia Johnson
+                        <small>CEO</small>
+                    </h3>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <h3>Dawn
+                        <small>Head of Design</small>
+                    </h3>
+                </div>
+                <div class="col-sm-4 text-center">
+                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
+                    <h3>Rachel Johnson
+                        <small>Head of Communications</small>
+                    </h3>
+                </div>
+                <div class="clearfix"></div>
             </div>
         </div>
+
     </div>
     <!-- /.container -->
 
@@ -142,13 +139,6 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
-
-    <!-- Script to Activate the Carousel -->
-    <script>
-    $('.carousel').carousel({
-        interval: 5000 //changes the speed
-    })
-    </script>
 
 </body>
 
