--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Patricia's Back Barn</title>
+    <title>Contact - Patricia's Back Barn</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -33,7 +33,7 @@
 <body>
 
     <div class="brand">Patricia's Back Barn</div>
-    <div class="address-bar">6610 Shawnee Road | North Tonawanda, NY 14120 | 716.731.1911</div>
+    <div class="address-bar">6610 Shawnee Road | North Tonwanda, NY 14120 | 716.731.1911</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -72,42 +72,30 @@
 
         <div class="row">
             <div class="box">
-                <div class="col-lg-12 text-center">
-                    <div id="carousel-example-generic" class="carousel slide">
-                        <!-- Indicators -->
-                        <ol class="carousel-indicators hidden-xs">
-                            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-                        </ol>
-
-                        <!-- Wrapper for slides -->
-                        <div class="carousel-inner">
-                            <div class="item active">
-                                <img class="img-responsive img-full" src="img/patriciafav.jpg" alt="">
-                            </div>
-                            <div class="item">
-                                <img class="img-responsive img-full" src="img/patriciaroom.jpg" alt="">
-                            </div>
-                            <div class="item">
-                                <img class="img-responsive img-full" src="img/patriciabuffalo.jpg" alt="">
-                            </div>
-                        </div>
-
-                        <!-- Controls -->
-                        <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-                            <span class="icon-prev"></span>
-                        </a>
-                        <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-                            <span class="icon-next"></span>
-                        </a>
-                    </div>
-                    <h2 class="brand-before">
-                        <small>Welcome to</small>
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center">Contact
+                        <strong>Patricia's Back Barn</strong>
                     </h2>
-                    <h1 class="brand-name">Patricia's Back Barn</h1>
-                    <hr class="tagline-divider">
+                    <hr>
                 </div>
+                <div class="col-md-8">
+                    <!-- Embedded Google Map using an iframe - to select your location find it on Google maps and paste the link as the iframe src. If you want to use the Google Maps API instead then have at it! -->
+                    <iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2912.9015758558144!2d-78.83957558451988!3d43.10658327914385!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d37ab4b990498b%3A0x5070dc95e535b9f4!2s6610+Shawnee+Rd%2C+North+Tonawanda%2C+NY+14120!5e0!3m2!1sen!2sus!4v1484696033899" width="600" height="450" frameborder="0" style="border:0" allowfullscreen>"></iframe>
+                </div>
+                <div class="col-md-4">
+                    <p>Phone:
+                        <strong>716.731.1911</strong>
+                    </p>
+                    <p>Email:
+                        <strong><a href="mailto:name@example.com">patriciasbackbarn@gmail.com</a></strong>
+                    </p>
+                    <p>Address:
+                        <strong>6610 Shawnee Road
+                            <br>North Tonawanda, NY 14120</strong>
+                    </p>
+                </div>
+                <div class="clearfix"></div>
             </div>
         </div>
 
@@ -115,15 +103,39 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Website Under Construction
-                        <strong>Come Back Soon!</strong>
+                    <h2 class="intro-text text-center">Contact
+                        <strong>form</strong>
                     </h2>
                     <hr>
-                    <img class="img-responsive img-border img-left" src="img/patriciamain.jpg" alt="">
-                    <hr class="visible-xs">
-                    <p></p>
+                    <form role="form">
+                        <div class="row">
+                            <div class="form-group col-lg-4">
+                                <label>Name</label>
+                                <input type="text" class="form-control">
+                            </div>
+                            <div class="form-group col-lg-4">
+                                <label>Email Address</label>
+                                <input type="email" class="form-control">
+                            </div>
+                            <div class="form-group col-lg-4">
+                                <label>Phone Number</label>
+                                <input type="tel" class="form-control">
+                            </div>
+                            <div class="clearfix"></div>
+                            <div class="form-group col-lg-12">
+                                <label>Message</label>
+                                <textarea class="form-control" rows="6"></textarea>
+                            </div>
+                            <div class="form-group col-lg-12">
+                                <input type="hidden" name="save" value="contact">
+                                <button type="submit" class="btn btn-default">Submit</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
+
     </div>
     <!-- /.container -->
 
@@ -142,13 +154,6 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
-
-    <!-- Script to Activate the Carousel -->
-    <script>
-    $('.carousel').carousel({
-        interval: 5000 //changes the speed
-    })
-    </script>
 
 </body>
 
