--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
                     <hr>
                 </div>
                 <div class="col-md-6">
-                    <img class="img-responsive img-border-left" src="img/patriciamain.jpg" alt="">
+                    <img class="img-responsive img-border-left" src="img/patriciamain.JPG" alt="">
                 </div>
                 <div class="col-md-6">
                     <p>Patricia's Back Barn is a 3,000sq.ft. barn uniquely staged with an eclectic mix of furniture, home décor, accessories, antiques, vintage clothing, and architectural salvage. We look for the most unique pieces, specialize in mixing the old with the new.</p>
