--- a/index.html
+++ b/index.html
@@ -84,13 +84,13 @@
                         <!-- Wrapper for slides -->
                         <div class="carousel-inner">
                             <div class="item active">
-                                <img class="img-responsive img-full" src="img/patriciafav.jpg" alt="">
+                                <img class="img-responsive img-full" src="img/patriciafav.JPG" alt="">
                             </div>
                             <div class="item">
                                 <img class="img-responsive img-full" src="img/patriciaroom.jpg" alt="">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="img/patriciabuffalo.jpg" alt="">
+                                <img class="img-responsive img-full" src="img/patriciabuffalo.JPG" alt="">
                             </div>
                         </div>
 
@@ -119,7 +119,7 @@
                         <strong>Come Back Soon!</strong>
                     </h2>
                     <hr>
-                    <img class="img-responsive img-border img-left" src="img/patriciamain.jpg" alt="">
+                    <img class="img-responsive img-border img-left" src="img/patriciamain.JPG" alt="">
                     <hr class="visible-xs">
                     <p></p>
             </div>
